metadata/force-app/main/default/objects/CustomName_KWWhI__c/CustomName_KWWhI__c.object-meta.xml
<CustomObject>
    <description>Description_fmwVO</description>
    <label>CustomLabel_snvTG</label>
    <nameField>
        <label>CustomLabel_snvTG</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_snvTGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>