metadata/force-app/main/default/objects/CustomName_KWWhI__c/fields/CustomField_BNjDw__c.field-meta.xml
<CustomField>
    <fullName>CustomField_BNjDw__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldiCIdF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>